--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -78,13 +78,16 @@
 
                             <div class="single_product_menu d-flex">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="search"
-                                           aria-describedby="inputGroupPrepend">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="inputGroupPrepend">
-                                            <i class="ti-search"></i>
-                                        </span>
-                                    </div>
+                                    <input id="serchPro2"  type="text" class="form-control" placeholder="search" />
+                                        
+                                      
+
+                                        <div  id="search" class="input-group-prepend" onclick="search()">
+                                            <span class="input-group-text" id="inputGroupPrepend">
+                                                <i class="fa fa-search"></i>
+                                            </span>
+                                        </div>
+                                   
                                 </div>
                             </div>
                         </div>
@@ -107,52 +110,52 @@
                             </div>
                         </div>
                     }
-               
-
-                <div class="col-lg-12">
-                    <div class="pageination">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination justify-content-center">
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <i class="fa fa-angle-double-left"></i>
-                                    </a>
-                                </li>
 
 
-                                @{
-                                    switch (@Model.ActionName)
-                                    {
-                                        case "Index":
+                    <div class="col-lg-12">
+                        <div class="pageination">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination justify-content-center">
+                                    <li class="page-item">
+                                        <a class="page-link" href="#" aria-label="Previous">
+                                            <i class="fa fa-angle-double-left"></i>
+                                        </a>
+                                    </li>
+
+
+                                    @{
+                                        switch (@Model.ActionName)
+                                        {
+                                            case "Index":
 
                                                 for (int i = 0, k = 1; i < @Model.NumberOfPages; k++, i++)
                                                 {
                                                     <li class="page-item"><a class="page-link" asp-action=@Model.ActionName asp-controller="products" asp-route-id=@i> @k</a></li>
                                                 }
-                                            break;
-                                              case "CategoryFilterHome":
+                                                break;
+                                            case "CategoryFilterHome":
 
                                                 for (int i = 0, k = 1; i < @Model.NumberOfPages; k++, i++)
                                                 {
-                                                    <li class="page-item"><a class="page-link" asp-action=@Model.ActionName asp-controller="products" asp-route-id=@Model.Products[0].CategoryID  asp-route-page=@i> @k</a></li>
+                                                    <li class="page-item"><a class="page-link" asp-action=@Model.ActionName asp-controller="products" asp-route-id=@Model.Products[0].CategoryID asp-route-page=@i> @k</a></li>
                                                 }
-                                            break;
-                                           
+                                                break;
+
+                                        }
+
                                     }
 
-                                }
-
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <i class=" fa fa-angle-double-right"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#" aria-label="Next">
+                                            <i class=" fa fa-angle-double-right"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
-                </div>
 
-                 </div>
+                </div>
             </div>
         </div>
     </div>
