--- a/Views/Products/List.cshtml
+++ b/Views/Products/List.cshtml
@@ -33,7 +33,7 @@
 					<div class="country">Category</div>
 					<div class="country">Cotrols</div>
 				</div>
-                <div class="table-body">
+                <div id="productListBody" class="table-body">
                 @foreach (var item in Model) {
 				<div class="table-row">
 					<div class="serial">@x</div>
