--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -118,7 +118,7 @@
                         <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark"
                                 href="javascript:void(0)"><i class="mdi mdi-magnify me-1"></i> <span class="font-16">Search</span></a>
                             <form class="app-search position-absolute">
-                                <input type="text" class="form-control" placeholder="Search &amp; enter"> <a
+                                <input  id="AdminSearch" type="text" class="form-control" placeholder="Search &amp; enter"> <a
                                     class="srh-btn"><i class="mdi mdi-window-close"></i></a>
                             </form>
                         </li>
@@ -281,7 +281,7 @@
     <!-- custom js -->
     <script src="/js/custom.js"></script>
       <!-- cart js -->
-    <script src="/js/Cart.js"></script>
+    <script src="/js/AdminSearch.js"></script>
 
      <!-- icon js -->
      <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
